src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GREMEDYFrameTerminatorErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import net.labymod.core.laby3d.opengl.error.LabyDebugContext;
import org.lwjgl.opengl.GREMEDYFrameTerminator;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GREMEDYFrameTerminatorErrorContext.class */
public final class GREMEDYFrameTerminatorErrorContext {
    public static void glFrameTerminatorGREMEDY() {
        GREMEDYFrameTerminator.glFrameTerminatorGREMEDY();
        LabyDebugContext.glError("glFrameTerminatorGREMEDY", new Object[0]);
    }
}
